--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,11 @@
 <html>
   {% include head.html %}
   <body>
-    {%include header.html content="Sample text and shit" %}
-    
-    {{ content }}
+    {% include header.html %}
+
+    <div class="content-container">
+      {{ content }}
+    </div>
 
     {% include footer.html %}
   </body>
