--- a/_includes/post-excerpt.html
+++ b/_includes/post-excerpt.html
@@ -1,21 +1,20 @@
-<div class="home-section">
-  <h4>Most recent post</h4>
-  <div class="blog-posts">
+<div class="blog-posts">
     <header class="post-header">
       <h2>
-        <a href="{{ site.posts.first.url }}">
-        {{ site.posts.first.title }}</a>
+        <a href="{{ post.url }}">{{ post.title}}
+        </a>
       </h2>
       <div class="post-byline">
-        <img src="{{ site.posts.first.gravatar }}">
-        <a href="{{ site.posts.first.authorTwitter }}"
+        <img src="{{ post.gravatar }}">
+        <a href="{{ site.post.authorTwitter }}"
         class="social-link">Tw</a>
-        by: {{ site.posts.first.author }}
-        <span> - {{ site.posts.first.date | date: '%B %d, %Y' }}</span>
+        by: {{ posts.author }}
+        <span> - {{ posts.date | date: '%B %d, %Y' }}</span>
       </div>
     </header>
     <div class="posts-image"
-    style="background-image:url({{ site.posts.first.postHero }})"></div>
-    {{ site.posts.first.excerpt }}
+    style="background-image:url({{ post.postHero }})"></div>
+    {{ post.excerpt }}
   </div>
+
 </div>
